# CapiCompiler

./: .gitignore  App.cpp  App.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ConsoleMenu.cpp  ConsoleMenu.h  DataAccessLayer.cpp  DataAccessLayer.h  DataAccessLayerFile.cpp  DataAccessLayerFile.h  Dockerfile  IDAL.h  IMenu.cpp  IMenu.h  IMovieDAL.h  IUserDAL.h  Main.cpp  Main.h  MainApp  Makefile  Movie.cpp  Movie.h  MovieDALFile.cpp  MovieDALFile.h  MovieDALFileTest.h  README.md  User.cpp  User.h  UserDALFile.cpp  UserDALFile.h  UserTests  a.out  cmake_install.cmake  errors.cpp  errors.h  lookup.h  lookup.hpp  main.cpp  (+11 more)
commands/: Add.cpp  Add.h  Help.cpp  Help.h  ICommand.cpp  ICommand.h  Icommand.cpp  Icommand.h  Reccomend.cpp  Reccomend.h  Recommend.cpp  Recommend.h
data/: movies.txt  users.txt
source/: errors.hpp  main.cpp  makefile  push_back_stream.hpp  tokenizer.hpp  tokens.cpp  tokens.hpp
src/: lookup.hpp  tokenizer.cpp
test/: DALTests.h  MovieRecommendationTest.cpp  help_test.h
tests/: DALTests.cpp  DALTests.h  End_to_End.cpp  MockMovieDAL.h  MockUserDAL.h  MovieDALFileTest.cpp  MovieDALFileTest.h  MovieTests.cpp  MovieTests.h  UserDALFileTest.cpp  UserDALFileTest.h  UserFileTest.cpp  UserFileTest.h  UserTests.cpp  UserTests.h  add_test.cpp  add_test.h  exmp_test.cpp  help_test.cpp  recommend_test.cpp  recommend_test.h
